--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div class="container">
     <h1>PhotoSwipe</h1>
 
-    <button class="btn btn-primary">Galéria megnyitása</button>
+    <button id="open-gallery" class="btn btn-primary">Galéria megnyitása</button>
   </div>
 
   <!-- PhotoSwipe - HTML -->
